--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@sendgrid/mail": "^8.1.6",
             "@vercel/blob": "^2.0.0",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
